trying to come up with a decent way of creating workouts

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   fluttericon: ^2.0.0
   line_icons: ^2.0.1
   google_fonts: ^3.0.1
+  modal_bottom_sheet: ^2.1.2
 
 dev_dependencies:
   flutter_test:
