--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   line_icons: ^2.0.1
   google_fonts: ^3.0.1
   modal_bottom_sheet: ^2.1.2
+  expandable_page_view: ^1.0.17
 
 dev_dependencies:
   flutter_test:
