--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,8 +46,8 @@ dependencies:
   flutter_slidable: ^2.0.0
   shared_preferences: ^2.0.16
   uuid: ^3.0.7
-  fluttericon: ^2.0.0
   line_icons: ^2.0.1
+  ionicons: ^0.2.2
   google_fonts: ^3.0.1
   modal_bottom_sheet: ^2.1.2
   expandable_page_view: ^1.0.17
