--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   modal_bottom_sheet: ^2.1.2
   expandable_page_view: ^1.0.17
   intl: ^0.18.0
+  material_color_utilities: ^0.1.5
 
 dev_dependencies:
   flutter_test:
