--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,8 @@ dependencies:
   expandable_page_view: ^1.0.17
   intl: ^0.18.0
   material_color_utilities: ^0.2.0
+  flutter_animate: ^4.1.0
+  fl_chart: ^0.61.0
 
 dev_dependencies:
   flutter_test:
