--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,7 +52,7 @@ dependencies:
   material_color_utilities: ^0.2.0
   flutter_animate: ^4.1.0
   fl_chart: ^0.61.0
-  graphic: ^2.2.0
+  auto_size_text: ^3.0.0
 
 dev_dependencies:
   flutter_test:
@@ -79,6 +79,7 @@ flutter:
   assets:
     - sql/init.sql
     - sql/tests.json
+    - sql/init.json
     
     - assets/icons/unavailable-96.png
     - assets/icons/bench-press-96.png
