--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,7 +48,7 @@ dependencies:
   google_fonts: ^4.0.3
   modal_bottom_sheet: ^3.0.0-pre
   expandable_page_view: ^1.0.17
-  intl: ^0.18.0
+  intl: ^0.18.1
   material_color_utilities: ^0.2.0
   flutter_animate: ^4.1.0
   fl_chart: ^0.61.0
@@ -58,6 +58,7 @@ dependencies:
   firebase_analytics: ^10.4.3
   firebase_auth: ^4.6.3
   google_sign_in: ^6.1.4
+  syncfusion_flutter_calendar: ^22.1.37
 
 dev_dependencies:
   flutter_test:
