--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,8 +33,6 @@ dependencies:
     sdk: flutter
 
 
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
   sqflite: ^2.2.3
   provider: ^6.0.5
   sprung: ^3.0.1
@@ -65,6 +63,9 @@ dependencies:
   path: ^1.8.3
   video_player: ^2.7.0
   newrelic_mobile: 1.0.0
+  aws_signature_v4: ^0.4.0+2
+  flutter_image_compress: ^2.0.4
+  video_compress: ^3.1.0
 
 dev_dependencies:
   flutter_test:
