--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,7 +17,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.0+1
+version: 1.0.3+3
 
 environment:
   sdk: '>=2.18.1 <3.0.0'
@@ -65,7 +65,8 @@ dependencies:
   newrelic_mobile: 1.0.0
   aws_signature_v4: ^0.4.0+2
   flutter_image_compress: ^2.0.4
-  video_compress: ^3.1.0
+  video_compress: 3.1.1
+  in_app_purchase: ^3.1.7
 
 dev_dependencies:
   flutter_test:
