--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,7 +17,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.10+10
+version: 1.0.12+12
 
 environment:
   sdk: '>=2.18.1 <3.0.0'
@@ -68,6 +68,8 @@ dependencies:
   video_compress: 3.1.1
   in_app_purchase: ^3.1.7
   url_launcher: ^6.1.14
+  in_app_review: ^2.0.6
+  package_info_plus: ^4.1.0
 
 dev_dependencies:
   flutter_test:
@@ -170,6 +172,7 @@ flutter:
     - assets/images/RAW-wdetail.png
     - assets/images/RAW-wedit.png
     - assets/images/RAW-wlaunch.png
+    - assets/images/sapphire_text_blue_small.png
 
   # fonts:
   #   - family: Schyler
