--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,7 +17,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.22+22
+version: 1.1.1+24
 
 environment:
   sdk: '>=2.18.1 <3.0.0'
@@ -38,7 +38,11 @@ dependencies:
   sprung: ^3.0.1
   visibility_detector: ^0.3.3
   animated_list_plus: ^0.5.0
-  flutter_slidable: ^2.0.0
+  # flutter_slidable: 3.1.1
+  flutter_slidable:
+    git:
+      url: https://github.com/letsar/flutter_slidable.git
+      ref: master
   shared_preferences: ^2.0.16
   uuid: ^3.0.7
   line_icons: ^2.0.1
@@ -47,9 +51,9 @@ dependencies:
   modal_bottom_sheet: ^3.0.0-pre
   expandable_page_view: ^1.0.17
   intl: ^0.18.1
-  material_color_utilities: ^0.5.0
+  material_color_utilities: ^0.11.1
   flutter_animate: ^4.1.0
-  fl_chart: ^0.61.0
+  fl_chart: 0.69.0
   auto_size_text: ^3.0.0
   flutter_svg: ^2.0.5
   firebase_core: ^2.14.0
@@ -72,6 +76,9 @@ dependencies:
   package_info_plus: ^4.1.0
   share_plus: ^7.2.1
   pocketbase: ^0.18.1
+
+dependency_overrides:
+  win32: ^5.5.4
 
 dev_dependencies:
   flutter_test:
