--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,48 +33,48 @@ dependencies:
     sdk: flutter
 
 
-  sqflite: ^2.2.3
-  provider: ^6.0.5
+  sqflite: ^2.3.3+2
+  provider: ^6.1.2
   sprung: ^3.0.1
-  visibility_detector: ^0.3.3
-  animated_list_plus: ^0.5.0
+  visibility_detector: ^0.4.0+2
+  animated_list_plus: ^0.5.2
   # flutter_slidable: 3.1.1
   flutter_slidable:
     git:
       url: https://github.com/letsar/flutter_slidable.git
       ref: master
-  shared_preferences: ^2.0.16
-  uuid: ^3.0.7
-  line_icons: ^2.0.1
+  shared_preferences: ^2.3.2
+  uuid: ^4.5.1
+  line_icons: ^2.0.3
   ionicons: ^0.2.2
-  google_fonts: ^4.0.3
-  modal_bottom_sheet: ^3.0.0-pre
+  google_fonts: ^6.2.1
+  modal_bottom_sheet: ^3.0.0
   expandable_page_view: ^1.0.17
-  intl: ^0.18.1
+  intl: ^0.19.0
   material_color_utilities: ^0.11.1
-  flutter_animate: ^4.1.0
+  flutter_animate: ^4.5.0
   fl_chart: 0.69.0
   auto_size_text: ^3.0.0
-  flutter_svg: ^2.0.5
-  firebase_core: ^2.14.0
-  firebase_analytics: ^10.4.3
-  firebase_auth: ^4.6.3
-  google_sign_in: ^6.1.4
-  syncfusion_flutter_calendar: ^22.1.37
-  collection: ^1.17.1
-  image_picker: ^1.0.1
-  path_provider: ^2.0.15
-  path: ^1.8.3
-  video_player: ^2.7.0
-  newrelic_mobile: 1.0.0
-  aws_signature_v4: ^0.4.0+2
-  flutter_image_compress: ^2.0.4
-  video_compress: 3.1.1
-  in_app_purchase: ^3.1.7
-  url_launcher: ^6.1.14
-  in_app_review: ^2.0.6
-  package_info_plus: ^4.1.0
-  share_plus: ^7.2.1
+  flutter_svg: ^2.0.10+1
+  firebase_core: ^3.6.0
+  firebase_analytics: ^11.3.3
+  firebase_auth: ^5.3.1
+  google_sign_in: ^6.2.1
+  syncfusion_flutter_calendar: ^27.1.51
+  collection: ^1.19.0
+  image_picker: ^1.1.2
+  path_provider: ^2.1.4
+  path: ^1.9.0
+  video_player: ^2.9.1
+  newrelic_mobile: 1.1.3
+  aws_signature_v4: ^0.6.3
+  flutter_image_compress: 2.3.0
+  video_compress: ^3.1.3
+  in_app_purchase: ^3.2.0
+  url_launcher: ^6.3.0
+  in_app_review: 2.0.9
+  package_info_plus: ^8.0.2
+  share_plus: ^10.0.2
   pocketbase: ^0.18.1
 
 dependency_overrides:
@@ -89,7 +89,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^2.0.0
+  flutter_lints: ^5.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
