--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,7 +17,7 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.2.1+33
+version: 1.2.1+34
 
 environment:
   sdk: ">=2.18.1 <3.0.0"
@@ -75,12 +75,17 @@ dependencies:
   package_info_plus: ^8.0.2
   share_plus: ^10.0.2
   pocketbase: ^0.18.1
+  screenshot: ^3.0.0
+  image: ^4.5.2
+  device_frame: ^1.2.0
 
 dependency_overrides:
   win32: ^5.5.4
 
 dev_dependencies:
   flutter_test:
+    sdk: flutter
+  integration_test:
     sdk: flutter
 
   # The "flutter_lints" package below contains a set of recommended lints to
@@ -178,6 +183,7 @@ flutter:
     - assets/svg/graph2.svg
     - assets/svg/list.svg
     - assets/svg/error.svg
+    - assets/svg/ios-battery-full-3.svg
 
     - assets/images/apple.png
     - assets/images/google.png
