--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,7 +17,7 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.2.1+35
+version: 1.2.2+36
 
 environment:
   sdk: ">=2.18.1 <3.0.0"
@@ -65,19 +65,20 @@ dependencies:
   path_provider: ^2.1.4
   path: ^1.9.0
   video_player: ^2.9.1
-  newrelic_mobile: 1.1.3
   aws_signature_v4: ^0.6.3
   flutter_image_compress: 2.3.0
   video_compress: ^3.1.3
   in_app_purchase: ^3.2.0
-  url_launcher: ^6.3.0
+  url_launcher: 6.3.1
   in_app_review: 2.0.9
   package_info_plus: ^8.0.2
   share_plus: ^10.0.2
-  pocketbase: ^0.18.1
+  pocketbase: 0.21.0
   screenshot: ^3.0.0
   image: ^4.5.2
   device_frame: ^1.2.0
+  connectivity_plus: ^6.1.2
+  flutter_custom_tabs: ^2.1.0
 
 dependency_overrides:
   win32: ^5.5.4
