--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,7 +17,7 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.2.3+39
+version: 1.2.4+41
 
 environment:
   sdk: ">=2.18.1 <3.0.0"
@@ -82,6 +82,7 @@ dependencies:
   flutter_custom_tabs: ^2.1.0
   purchases_flutter: ^8.6.0
   purchases_ui_flutter: ^8.6.0
+  opentelemetry: ^0.18.10
 
 dependency_overrides:
   win32: ^5.5.4
