some environment edits

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -83,6 +83,7 @@ dependencies:
   purchases_flutter: ^8.6.0
   purchases_ui_flutter: ^8.6.0
   opentelemetry: ^0.18.10
+  flutter_dotenv: ^5.2.1
 
 dependency_overrides:
   win32: ^5.5.4
@@ -113,6 +114,8 @@ flutter:
   uses-material-design: true
 
   assets:
+    - .env
+    
     - sql/init.sql
     - sql/pre-init.json
     - sql/migration_1.sql
