--- a/.gitignore
+++ b/.gitignore
@@ -55,7 +55,6 @@ ideas.md
 GoogleService-Info.plist
 
 .env
-.env.make
 
 # screenshot server
 venv
@@ -63,5 +62,8 @@ venv
 screenshots/device
 screenshots/raw
 screenshots/store-small
+screenshots/store-large
+screenshots/webp/raw
+screenshots/webp/store-small
 
 android/app/.cxx
