--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,4 +1,5 @@
-org.gradle.jvmargs=-Xmx2g
+org.gradle.jvmargs=-Xmx2048m -XX:MaxMetaspaceSize=512m \
+  -Dfile.encoding=UTF-8
 android.useAndroidX=true
 android.enableJetifier=true
 android.defaults.buildfeatures.buildconfig=true
